Wed Dec 12 12:38:16 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Accept_Handler.cpp:
	* ace/SSL/SSL_Connect_Handler.cpp:

	  Added missing "ace/Reactor.h" include.  ACE_Reactor is only
	  forward declared otherwise.

Wed Dec 12 12:21:11 2001  Vladimir Chovanec  <Vladimir.CHOVANEC@asset.sk>

	* ace/SSL/SSL_Accept_Handler.cpp (handle_input, handle_output):

	  On Win32 platforms, cancel any previously scheduled "wakeup"
	  before attempting to perform IO.  If necessary, a "wakeup" will
	  be scheduled if the IO call would block.

	  (ssl_accept):

	  On Win32 platforms, it is necessary to schedule a "wakeup" in
	  the Reactor if an IO call would block.  This is necessary since
	  Windows events are only notified once.  Hence, event handlers
	  must be rescheduled.

	* ace/SSL/SSL_Connect_Handler.cpp (handle_input, handle_output,
	  ssl_connect):

	  Likewise.

Wed Dec 12 06:56:46 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Petr Tuma to the hall of fame.

Wed Dec 12 07:29:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Makefile.bor:
          Added Recycable

Tue Dec 11 12:17:45 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Accept_Handler.h (ACE_SSL_Accept_Handler):
	* ace/SSL/SSL_Connect_Handler.h (ACE_SSL_Connect_Handler):

	  Accept a reference to the flag that causes the calling thread's
	  event loop to stop on error.  See below for details.

	* ace/SSL/SSL_Accept_Handler.cpp (ssl_accept):
	* ace/SSL/SSL_Connect_Handler.cpp (ssl_connect):

	  Return 1 if errno == EWOULDBLOCK and SSL_pending() return a
	  value greater than zero.  The event handler should be called
	  back before waiting for more in events in the reactor.  This
	  change causes the behavior for this case to match that of the
	  SSL_ERROR_WANT_{READ,WRITE} cases.  Thanks to Vladimir Chovanec
	  <Vladimir.CHOVANEC@asset.sk> for providing this fix.

	  (handle_close):

	  Set the "handler_closed" flag to one.  This will notify the