@@ -128,7 +128,7 @@ SOURCE=.\SSL_SOCK_Stream.cpp
 # End Group
 # Begin Group "Header Files"
 
-# PROP Default_Filter "h;hpp;hxx;hm;inl"
+# PROP Default_Filter "h;hpp;hxx;hm"
 # Begin Source File
 
 SOURCE=.\SSL_Asynch_Stream.h
@@ -164,10 +164,10 @@ SOURCE=.\sslconf.h
 # End Group
 # Begin Group "Inline Files"
 
-# PROP Default_Filter "*.i"
+# PROP Default_Filter "i;inl"
 # Begin Source File
 
-SOURCE=.\SSL_Context.i
+SOURCE=.\SSL_Context.inl
 # End Source File
 # Begin Source File
 
