@@ -1,3 +1,12 @@
+Wed Dec 12 16:29:17 2001  Greg Burley  <Burley@tabq.com.au>
+
+	* ace/SSL/SSL_Context.h:
+	* ace/SSL/SSL_Context.inl:
+	* ace/SSL/SSL_Context.cpp:
+
+	  Made it possible to specify certificate authority locations
+	  after the verification mode has been set.
+
 Wed Dec 12 12:38:16 2001  Ossama Othman  <ossama@uci.edu>
 
 	* ace/SSL/SSL_Accept_Handler.cpp:
